<resources>
    <string name="app_name">foodfriends</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="bienvenido_a_food_friends">¡Bienvenido a Food Friends!</string>
    <string name="todo">TODO</string>
    <string name="entrar">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="eres_nuevo_registrate_aqu">¿Eres nuevo? Registrate aquí</string>
    <string name="borrar_cuenta">Borrar Cuenta</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="correo">Correo:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="guardar_perfil">Guardar Perfil</string>
    <string name="name">Name</string>
    <string name="escribe_su_direccion">Escribe su direccion</string>
    <string name="id_del_usuario">ID del Usuario:</string>
    <string name="txtCorreoUsuario">TextView</string>
    <string name="Vacio" />
    <string name="volver_al_menu">Volver al Menu</string>
    <string name="acerca_de_esta_aplicaci_n">Acerca de esta aplicación</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="acerca_de">Acerca de</string>
    <string name="acerca_de_texto">"Bienvenido a FoodFriends, la app que conecta amantes de la comida con los mejores restaurantes de comida a domicilio.\n
        Nuestra visión es convertirnos en la plataforma #1 en comida a domicilio, entregando no solo comida deliciosa si no también la mejor experiencia para restaurantes y clientes.
        Nuestra misión es impulsar los negocios locales de comida brindando un acceso simple y rápido a sus servicios, al mismo tiempo que ofrecemos a los clientes una amplia selección gastronómica a solo un click de distancia. \n
        Valoramos y protegemos la privacidad de nuestros usuarios. \n
        Esta es la versión 1.0 de FoodFriends, pero tenemos grandes planes para mejorar la experiencia y agregar nuevas funciones próximamente.
        Si tienes consultas o comentarios, no dudes en contactarnos a nuestro correo electrónico foodfriendsapk@gmail.com.
         \n¡Buen provecho!  \n\nEquipo FoodFriends"</string>
    <string name="volver">Volver</string>
    <string name="title_activity_menu_drawable">MenuDrawableActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil</string>
    <string name="carrito">Carrito</string>
    <string name="mas_vendidos">Mas vendidos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="aplicar_filtros">Aplicar Filtros</string>
    <string name="busqueda_personalizada">BUSQUEDA PERSONALIZADA</string>
    <string name="estilo_de_comida">Estilo de comida</string>
    <string name="valoraci_n">Valoración</string>
    <string name="americana">Americana</string>
    <string name="japonesa">Japones</string>
    <string name="mexicana">Mexicana</string>
    <string name="kebab">Kebab</string>
    <string name="griega">Griega</string>
    <string name="espanyola">Española</string>
    <string name="india">India</string>
    <string name="italiana">Italiana</string>
    <string name="china">China</string>
    <string name="textview">TextView</string>
    <string name="nombre_del_restaurante">Nombre del Restaurante</string>
    <string name="tipo_de_comida">Tipo de Comida</string>
    <string name="imagen">IMAGEN</string>
    <string name="precio_linea_pedido">Precio Linea Pedido</string>
    <string name="unidades_pedidas">Unidades pedidas</string>
    <string name="_1">1</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="realizar_pedido">Realizar pedido</string>
    <string name="precio_total_del_pedido">Precio total del pedido</string>
    <string name="carrito_vacio">CARRITO VACIO</string>
    <string name="fecha_pedido">Fecha Pedido</string>
    <string name="idpedido">IdPedido</string>
    <string name="precio_total">Precio total</string>
    <string-array name="dias_array">
        <item>7 días</item>
        <item>15 días</item>
        <item>30 días</item>
    </string-array>
    <string-array name="provincias_array">
        <item>Asturias</item>
    </string-array>

    <string-array name="municipios_array">
        <item>Oviedo</item>
        <item>Avilés</item>
        <item>Gijón</item>
    </string-array>

    <string-array name="localidades_oviedo_array">
        <item>Oviedo</item>
        <item>La Corredoira</item>
        <item>Colloto</item>
    </string-array>

    <string-array name="localidades_aviles_array">
        <item>Avilés</item>
        <item>La Sablera</item>
        <item>Heros</item>
        <item>Miranda</item>
    </string-array>

    <string-array name="localidades_gijon_array">
        <item>Gijón</item>
        <item>La Camocha</item>
        <item>Cimavilla</item>
        <item>Marea de Riba</item>
    </string-array>


</resources>