<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgButtonEliminarLinea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/acerca_de"
                app:srcCompat="@drawable/papelera"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="243dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtNombreProductoLineaPedido"
                android:layout_width="376dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_producto"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/txtUnidadesPedidas"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/unidades_pedidas"
                android:textColor="#757575"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtPrecioLineaPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_linea_pedido"
                android:textColor="#757575"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="49dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumeroLinea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="40sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>