<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:animateLayoutChanges="true"
    android:background="#000000"
    android:backgroundTint="#000000"
    app:cardBackgroundColor="#000000"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="151dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/txtPrecioTotalLinea"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/fecha_pedido"
                android:textAlignment="center"
                android:textColor="#FF0000" />

            <ImageView
                android:id="@+id/imgMostrarLineas"
                android:layout_width="34dp"
                android:layout_height="27dp"
                android:layout_marginLeft="55dp"
                android:baselineAlignBottom="false"
                android:scaleType="fitCenter"
                android:src="@drawable/pedido"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="153dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtProductoLinea"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:text="@string/idpedido"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:ignore="VisualLintBounds" />

            <TextView
                android:id="@+id/txtUnidadesLinea"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/precio_total"
                android:textColor="#18AA1F"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="9dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNumeroPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="DuplicateIds" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>