<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imgProductoLineaPedido"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagen"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/imgProductoLineaPedido"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtNombreProductoCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nombre_del_restaurante"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUnidadesPedidasCarrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tipo_de_comida"
                android:textColor="#757575"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txtNumeroTelefono"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autoSizeTextType="uniform"
                android:text="Numero Telefono"
                android:textColor="#FF0000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtDireccionRestaurante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Direccion Empresa"
                android:textColor="#000000"
                android:textSize="14sp"
                android:autoSizeTextType="uniform"/>


        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>



